--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "discourse-search-banner",
+  "name": "discourse-cashback-search-banner",
   "version": "1.0.0",
-  "repository": "https://github.com/discourse/discourse-search-banner",
-  "author": "Discourse",
+  "repository": "https://github.com/CashbackForex/discourse-cashback-search-banner",
+  "author": "Nazarii Khomych",
   "license": "GPL-3.0-or-later",
   "devDependencies": {
     "eslint-config-discourse": "^3.1.0"
